<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zassmin.imagesearch.activites.FilterActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter"
        android:id="@+id/tvColor"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/spnColor"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnColor"
        android:entries="@array/image_filter_colors"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tvColor"
        style="@style/Base.Widget.AppCompat.DropDownItem.Spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/image_size_filter"
        android:layout_below="@+id/tvColor"
        android:layout_alignBottom="@+id/spnImageSize"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnImageSize"
        android:entries="@array/image_filter_sizes"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tvImageSize"
        android:layout_below="@id/spnColor"
        style="@style/Base.Widget.AppCompat.DropDownItem.Spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvImageSize"
        android:id="@+id/tvImageType"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/image_type_filter"
        android:layout_alignBottom="@+id/spnImageType" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnImageType"
        android:entries="@array/image_filter_types"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tvImageType"
        android:layout_below="@id/spnImageSize"
        style="@style/Base.Widget.AppCompat.DropDownItem.Spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSite"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/site_filter"
        android:layout_below="@+id/tvImageType"
        android:layout_alignBottom="@+id/etSite"
        android:paddingRight="@dimen/activity_horizontal_margin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/filter_site_hint"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tvSite"
        android:layout_below="@id/spnImageType"
        android:textColor="@color/primary_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSetFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textAllCaps="false"
        android:text="@string/set_filters"
        android:layout_below="@id/etSite"
        android:onClick="onFilterSet"
        android:textSize="18sp"/>

</RelativeLayout>
